[gd_scene load_steps=5 format=3 uid="uid://c7mdfmap7klbc"]

[ext_resource type="Script" uid="uid://dkqdvujghxgn8" path="res://menu.gd" id="1_sbatl"]
[ext_resource type="Theme" uid="uid://br5tb1b2ybjei" path="res://menu_theme.tres" id="2_dv8xh"]
[ext_resource type="Texture2D" uid="uid://c2k00ts001ran" path="res://art/menu-bkg_tree.png" id="2_qokof"]
[ext_resource type="Theme" uid="uid://r4b8c8v4684v" path="res://slider_theme.tres" id="4_85qbd"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.98, 0.98)
pivot_offset = Vector2(-1.15024, -1.08561)
size_flags_horizontal = 4
size_flags_vertical = 6
script = ExtResource("1_sbatl")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_qokof")
patch_margin_left = 154
patch_margin_top = 114
patch_margin_right = 154
patch_margin_bottom = 113
axis_stretch_horizontal = 2
axis_stretch_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.340278
anchor_top = 0.337963
anchor_right = 0.659722
anchor_bottom = 0.695417
offset_bottom = -21.63
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1, 1.103)
theme_override_constants/separation = 20
metadata/_edit_use_anchors_ = true

[node name="audio" type="Button" parent="NinePatchRect/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_dv8xh")
text = "TOGGLE AUDIO"

[node name="quit" type="Button" parent="NinePatchRect/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_dv8xh")
text = "QUIT"

[node name="HSlider" type="HSlider" parent="NinePatchRect/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("4_85qbd")
max_value = 40.0
step = 0.5

[node name="Label" type="Label" parent="NinePatchRect/VBoxContainer/HSlider"]
layout_mode = 0
offset_left = -81.0
offset_top = -1.0
offset_right = 4.0
offset_bottom = 36.0
theme_override_font_sizes/font_size = 11
text = "Wave Strength"

[node name="HSlider2" type="HSlider" parent="NinePatchRect/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("4_85qbd")
max_value = 400.0
step = 0.5
value = 30.0

[node name="Label" type="Label" parent="NinePatchRect/VBoxContainer/HSlider2"]
layout_mode = 0
offset_left = -81.0
offset_top = -1.0
offset_right = 4.0
offset_bottom = 36.0
theme_override_font_sizes/font_size = 11
text = "Fish speed"

[connection signal="pressed" from="NinePatchRect/VBoxContainer/audio" to="." method="_on_audio_pressed"]
[connection signal="pressed" from="NinePatchRect/VBoxContainer/quit" to="." method="_on_quit_pressed"]
[connection signal="value_changed" from="NinePatchRect/VBoxContainer/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="value_changed" from="NinePatchRect/VBoxContainer/HSlider2" to="." method="_on_h_slider_2_value_changed"]
